# triewm

./: .gitignore  .prettierrc  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  build.rs  meson.build  openwm  triewm
.cache/clangd/index/: Triewm.cpp.F10FF9B649F945A7.idx  Triewm.h.9CA8545A02858BE2.idx  main.cpp.AE845199CCC97D37.idx
.kdev4/: triewm.kdev4
res/: cursor.rgba
src/: Makefile  Output.cpp  Output.h  Triewm.cpp  Triewm.h  bar.rs  color.c  color.h  configs.rs  cur.rs  main.c  main.cpp  main.rs  tinywl.c  utils.rs  vec.h
src/cli/: commands.h  help.c  help.h
src/color/: color.c  color.h  gradient.c  gradient.h
